# Module_Web_13_Django_MHW

./: .gitignore  pyproject.toml
hw_django_project/: db.sqlite3
hw_django_project/hw_django_project/: settings.py
hw_django_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw_django_project/quotes/static/quotes/: styles.css
hw_django_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_info.html  authors.html  base.html  index.html  quotes_by_tag.html  search.html
hw_django_project/quotes/templatetags/: extract.py
hw_django_project/users/: forms.py  urls.py  views.py
hw_django_project/users/templates/users/: login.html  logout.html  signup.html
hw_django_project/utils/: add_quotes_to_mongo.py
