[tool.poetry]
name = "module-web-10-mhw"
version = "0.1.0"
description = ""
authors = ["Олександр <alexander.zhukov.2012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.3"
scrapy = "^2.11.1"
form = "^0.0.1"
psycopg2 = "^2.9.9"
pymongo = "^4.6.2"
mongoengine = "^0.28.2"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
